# website-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
src/: models.py  pdf_generator.py  service.py  url_safety.py  utils.py  view.py
src/ui/: __init__.py  conf.py  trusted_html.py
src/ui/components/: header.py  report.py
test/: conftest.py  test_pdf_generator.py  test_service.py  test_ui.py  test_url_safety.py  test_utils.py
